@@ -14,8 +14,8 @@ tokenize(x, ...)
 \method{tokenize}{character}(x, what = c("word", "sentence", "character",
   "fastestword", "fasterword"), removeNumbers = FALSE, removePunct = FALSE,
   removeSymbols = FALSE, removeSeparators = TRUE, removeTwitter = FALSE,
-  removeHyphens = FALSE, ngrams = 1L, skip = 0L, concatenator = "_",
-  simplify = FALSE, verbose = FALSE, ...)
+  removeHyphens = FALSE, removeURL = FALSE, ngrams = 1L, skip = 0L,
+  concatenator = "_", simplify = FALSE, verbose = FALSE, ...)
 
 \method{tokenize}{corpus}(x, ...)
 
@@ -26,22 +26,27 @@ is.tokenizedTexts(x)
 
 \item{...}{additional arguments not used}
 
-\item{what}{the unit for splitting the text, available alternatives are:
-\describe{ 
-\item{\code{"word"}}{(recommended default) smartest, but slowest, word tokenization method; see \link[stringi]{stringi-search-boundaries} for details.}
-\item{\code{"fasterword"}}{dumber, but faster, word tokenizeation method, \code{\link[stringi]{stri_split_regex}(x, "\\\\s")}}
-\item{\code{"fastestword"}}{dumbest, but fastest, word tokenization method, calls \code{\link[stringi]{stri_split_fixed}(x, " ")}}
-\item{\code{"character"}}{tokenization into individual characters}
-\item{\code{"sentence"}}{sentence segmenter, smart enough to handle some exceptions in English such as "Prof. Plum killed Mrs. Peacock." 
-  (but far from perfect).}
-}}
+\item{what}{the unit for splitting the text, available alternatives are: 
+\describe{ \item{\code{"word"}}{(recommended default) smartest, but 
+slowest, word tokenization method; see 
+\link[stringi]{stringi-search-boundaries} for details.} 
+\item{\code{"fasterword"}}{dumber, but faster, word tokenizeation method, 
+uses {\link[stringi]{stri_split_charclass}(x, "\\\\p{WHITE_SPACE}")}} 
+\item{\code{"fastestword"}}{dumbest, but fastest, word tokenization method,
+calls \code{\link[stringi]{stri_split_fixed}(x, " ")}} 
+\item{\code{"character"}}{tokenization into individual characters} 
+\item{\code{"sentence"}}{sentence segmenter, smart enough to handle some 
+exceptions in English such as "Prof. Plum killed Mrs. Peacock." (but far 
+from perfect).} }}
 
 \item{removeNumbers}{remove tokens that consist only of numbers, but not 
 words that start with digits, e.g. \code{2day}}
 
-\item{removePunct}{if \code{TRUE}, remove all characters in the Unicode "Punctuation" [P] class}
+\item{removePunct}{if \code{TRUE}, remove all characters in the Unicode 
+"Punctuation" [P] class}
 
-\item{removeSymbols}{if \code{TRUE}, remove all characters in the Unicode "Symbol" [S] class}
+\item{removeSymbols}{if \code{TRUE}, remove all characters in the Unicode 
+"Symbol" [S] class}
 
 \item{removeSeparators}{remove Separators and separator characters (spaces 
 and variations of spaces, plus tab, newlines, and anything else in the 
@@ -61,10 +66,13 @@ hyphenation and hyphenation-like characters in between words, e.g.
 \code{FALSE} to preserve such words as is, with the hyphens.  Only applies 
 if \code{what = "word"}.}
 
+\item{removeURL}{if \code{TRUE}, find and eliminate URLs beginning with
+http(s) -- see section "Dealing with URLs".}
+
 \item{ngrams}{integer vector of the \emph{n} for \emph{n}-grams, defaulting 
 to \code{1} (unigrams). For bigrams, for instance, use \code{2}; for 
 bigrams and unigrams, use \code{1:2}.  You can even include irregular 
-sequences such as \code{2:3} for bigrams and trigrams only.  See
+sequences such as \code{2:3} for bigrams and trigrams only.  See 
 \code{\link{ngrams}}.}
 
 \item{skip}{integer vector specifying the skips for skip-grams, default is 0 
@@ -101,7 +109,7 @@ The tokenizer is designed to be fast and flexible as well as to
   intermediate step.  Since \code{tokenize()} is most likely to be used by 
   more technical users, we have set its options to default to minimal 
   intervention. This means that punctuation is tokenized as well, and that 
-  nothing is removed by default from the text being tokenized except
+  nothing is removed by default from the text being tokenized except 
   inter-word spacing and equivalent characters.
 }
 \note{
@@ -110,6 +118,17 @@ This replaces an older function named \code{clean()}, removed from
   texts, such as punctuation or numbers, only only works on tokenized texts, 
   although texts of any length can be converted to lower case using 
   \code{\link{toLower}}.
+}
+\section{Dealing with URLs}{
+ URLs are tricky to tokenize, because they contain
+  a number of symbols and punctuation characters.  If you wish to remove 
+  these, as most people do, and your text contains URLs, then you should set
+  \code{what = "fasterword"} and \code{removeURL = TRUE}.  If you wish to
+  keep the URLs, but do not want them mangled, then your options are more
+  limited, since removing punctuation and symbols will also remove them from
+  URLs.  We are working on improving this behaviour.
+  
+  See the examples below.
 }
 \examples{
 # same for character vectors and for lists
@@ -135,6 +154,14 @@ tokenize("<tags> and other + symbols.", removeSymbols = TRUE)
 tokenize("<tags> and other + symbols.", removeSymbols = FALSE, what = "fasterword")
 tokenize("<tags> and other + symbols.", removeSymbols = TRUE, what = "fasterword")
 
+## examples with URLs - hardly perfect!
+txt <- "Repo https://githib.com/kbenoit/quanteda, and www.stackoverflow.com."
+tokenize(txt, removeURL = TRUE, removePunct = TRUE)
+tokenize(txt, removeURL = FALSE, removePunct = TRUE)
+tokenize(txt, removeURL = FALSE, removePunct = TRUE, what = "fasterword")
+tokenize(txt, removeURL = FALSE, removePunct = FALSE, what = "fasterword")
+
+
 ## MORE COMPARISONS
 txt <- "#textanalysis is MY <3 4U @myhandle gr8 #stuff :-)"
 tokenize(txt, removePunct = TRUE)
@@ -150,6 +177,7 @@ tokenize(txt, removeNumbers = FALSE, removePunct = TRUE)
 tokenize(txt, removeNumbers = TRUE, removePunct = FALSE)
 tokenize(txt, removeNumbers = FALSE, removePunct = FALSE)
 tokenize(txt, removeNumbers = FALSE, removePunct = FALSE, removeSeparators = FALSE)
+tokenize(txt, removeNumbers = TRUE, removePunct = TRUE, removeURL = TRUE)
 
 # character level
 tokenize("Great website: http://textasdata.com?page=123.", what = "character")
